src/index.css
/*

  Explorer Base Styles
  ~~~~~~~~~~~~~~~~~~~~

*/

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes circular-rotate {
  0% {
    transform: rotate(0deg);
    /* Fix IE11 wobbly */
    transform-origin: 50% 50%;
  }
  100% {
    transform: rotate(360deg);
  }
}

:root {
  color-scheme: dark;
}

html {
  font-size: 16px;
  -webkit-tap-highlight-color: transparent;
}

body {
  background: #16181A;
  font-family: 'Inter', sans-serif;
  scrollbar-gutter: stable;
  overflow-y: scroll;
  margin: 0;
  padding: 0;
}

a:focus {
  outline: none;
  box-shadow: none;
}

/*
  Scrollbar
  ~~~~~~~~~~
*/

.scrollstyle {
  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
}

.scrollstyle::-webkit-scrollbar-track {
  background-color: transparent;
}

.scrollstyle::-webkit-scrollbar {
  -webkit-appearance: none;
  background-color: transparent;
  width: 6px;
}

.scrollstyle::-webkit-scrollbar-thumb {
  background-color: transparent;
  border-radius: 6px;
}

.scrollstyle:hover::-webkit-scrollbar-thumb {
  background-color: rgba(255, 255, 255, 0.1);
}

.scrollstyle::-webkit-scrollbar-thumb:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.scrollstyle::-webkit-scrollbar-thumb:active {
  background-color: rgba(255, 255, 255, 0.2);
}

/*
  Tailwind utility classes
*/

@layer utilities {
  .bg-glass {
    @apply bg-black/30 backdrop-blur-[10px] border-[1.5px] border-white/20 shadow-[inset_0_0_20px_rgba(255,255,255,0.1),0_4px_20px_rgba(0,0,0,0.4)];
  }
  .bg-glass-dark {
    @apply bg-black/40 backdrop-blur-[10px] shadow-[0_2px_12px_rgba(0,0,0,0.3)];
  }
  .bg-radial-white {
    @apply bg-[radial-gradient(circle_at_30%_30%,rgba(255,255,255,0.25),rgba(255,255,255,0.05))]
  }
}

